<resources>
    <string name="trek_avenue">Trek Avenue</string>
    <string name="splash_logo">Your personal trekking\npartner</string>
    <string name="loading">Loading...</string>
    <string name="view_all">View\nAll</string>
    <string name="detail_placeholder_text">Details</string>
    <string name="providers_placeholder_text">Providers</string>
    <string name="book">Book</string>
    <string name="availableSlots">Available Slots</string>
    <string name="itinerary">Check Itinerary</string>
    <string name="startDate">Start Date - </string>
    <string name="endDate">End Date - </string>
    <string name="totalSlots">Total Slots - </string>
    <string name="availableSlotsText">Available Slots - </string>
    <string name="starting_from_string">Starting from : ₹ %1$s</string>
    <string name="search_for">Search for</string>
    <string name="recent_searches">Recent searches</string>
    <string name="no_recent_searches">No recent searches</string>
    <string name="enter_search_string">Please enter something to search for</string>
    <string name="no_results">No results found</string>
    <string name="filter_title">Filter</string>
    <string name="apply_filter">Apply Filter</string>
</resources>
