<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/outerLL"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/dateLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <nikhilg.dev.trekavenue.Utils.RobotoRegularTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/startDate"
                android:textSize="14sp"
                android:textColor="@color/text_medium_gray"/>

            <nikhilg.dev.trekavenue.Utils.RobotoRegularTextView
                android:id="@+id/startDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/text_dark_gray"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <nikhilg.dev.trekavenue.Utils.RobotoRegularTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/endDate"
                android:textSize="14sp"
                android:textColor="@color/text_medium_gray"/>

            <nikhilg.dev.trekavenue.Utils.RobotoRegularTextView
                android:id="@+id/endDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/text_dark_gray"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/slotLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <nikhilg.dev.trekavenue.Utils.RobotoRegularTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/totalSlots"
                android:textSize="14sp"
                android:textColor="@color/text_medium_gray"/>

            <nikhilg.dev.trekavenue.Utils.RobotoRegularTextView
                android:id="@+id/totalSlots"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/text_dark_gray"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <nikhilg.dev.trekavenue.Utils.RobotoRegularTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/availableSlotsText"
                android:textSize="14sp"
                android:textColor="@color/text_medium_gray"/>

            <nikhilg.dev.trekavenue.Utils.RobotoRegularTextView
                android:id="@+id/availableSlots"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/text_dark_gray"/>

        </LinearLayout>

    </LinearLayout>

    <nikhilg.dev.trekavenue.Utils.RobotoRegularTextView
        android:id="@+id/itineraryText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/text_dark_gray"
        android:textSize="14sp"
        android:layout_margin="16dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_gray_color"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"/>

</LinearLayout>